# fastapi_2026

./: pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 08d939e4c525_create_todos_table.py  c6f96693df36_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
